--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="fondo">
         <header class="contenedor header">
             <div class="logo">
-                <img src="recursos/logo.jpg" alt="Logo Opera Pizzería & Restaurante Medellín">
+                <img src="recursos/logo.png" alt="Logo Opera Pizzería & Restaurante Medellín">
             </div>
             <div class="info">
                 <h1>Opera Pizzería & Restaurante Medellín</h1>
