--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,700;1,400&family=Noto+Sans+HK:wght@400;500;700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Opera Pizzería & Restaurante Medellín</title>
 </head>
@@ -24,30 +25,68 @@
         </header>
     </div>
     <main class="contenedor">
+        <h2>Promoción</h2>
+        <div class="promocion">
+            <div class="infoPromo">
+                <p><strong>Martes - Viernes: </strong>12:00 Pm a 05:00 Pm</p>
+                <p>En Entradas - Pastas - Pizza - Plato Fuerte.</p>
+                <p><strong>*</strong>No aplica para Postres - Adiciones - Bebidas.</p>
+                <p><strong>*</strong>No aplica para días festivos.</p>
+            </div>
+            <div class="descuento">
+                <p><strong>20%</strong><br>Descuento</p>
+            </div>
+        </div>
         <h2>Nuestra carta</h2>
         <div class="imagenes">
-            <!--<div class="modal-container active">
+            <div class="modal-container" id="modal1">
                 <img src="recursos/opera1.png" alt="Entradas Carta">
-            </div>-->
-            <img src="recursos/opera1.png" alt="Entradas Carta">
-            <img src="recursos/opera2.png" alt="Pizzas Carta">
-            <img src="recursos/opera3.png" alt="Pizzas Carta">
-            <img src="recursos/opera4.png" alt="Plato Fuerte Carta">
-            <img src="recursos/opera5.png" alt="Bebidas Carta">
+            </div>
+            <div class="modal-container" id="modal2">
+                <img src="recursos/opera2.png" alt="Pizzas Carta">
+            </div>
+            <div class="modal-container" id="modal3">
+                <img src="recursos/opera3.png" alt="Pizzas Carta">
+            </div>
+            <div class="modal-container" id="modal4">
+                <img src="recursos/opera4.png" alt="Plato Fuerte Carta">
+            </div>
+            <div class="modal-container" id="modal5">
+                <img src="recursos/opera5.png" alt="Bebidas Carta">
+            </div>
         </div>
     </main>
     <div class="fondo">
-        <footer class="contenedor">
+        <footer>
+            <p>Gracias por venir, esperamos que vuelvan pronto.</p>
             <div class="footer">
-                <p>Gracias por venir, esperamos que vuelvan pronto.</p>
-                <a href="https://www.facebook.com/operapizzeriamedellin"><i class="fab fa-facebook-square face"></i></a>
-                <a href="https://www.instagram.com/operapizzeriamedellin/"><i class="fab fa-instagram insta"></i></a>
+                <div class="frase">
+                    <p><strong>"</strong>El secreto de matenerse joven es vivir con honestidad, comer lentamente y mentir respecto a la edad<strong>"</strong>
+                        <br><strong class="autor">Lucille Ball</strong></p>
+                </div>
+                <div class="horario">
+                    <p><strong>Martes a Jueves: </strong>12:00 Pm a 09:45 Pm</p>
+                    <p><strong>Viernes y Sábado: </strong>12:00 Pm a 10:45 Pm</p>
+                    <p><strong>Domingos y Días Festivos</strong>12:00 Pm a 09:45 Pm</p>
+                </div>
+                <div class="info">
+                    <p><i class="fas fa-phone-square"></i> Tel: 250 68 11</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Calle 42 # 70 - 22 | Laureles - Estadio</p>
+                    <p><i class="far fa-envelope"></i> operapizzeriayrest@gmail.com</p>
+                    <div class="redes">
+                        <h3>Siguenos</h3>
+                        <a href="https://www.facebook.com/operapizzeriamedellin"><i class="fab fa-facebook-square face"></i></a>
+                        <a href="https://www.instagram.com/operapizzeriamedellin/"><i class="fab fa-instagram insta"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copy">
                 <p>Desarrollado por Vanegas Desarrollo</p>
                 <p>2020</p>
             </div>
+        </footer>
     </div>
-    </footer>
-    <script src="script/script.js"></script>
+    <script type="text/javascript" src="script/script.js"></script>
 </body>
 
 </html>
