--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
         </div>
         <h2>Nuestra carta</h2>
         <div class="imagenes">
-            <div class="modal-container" id="modal1">
+            <div class="modal-container">
                 <img src="recursos/opera1.png" alt="Entradas Carta">
             </div>
-            <div class="modal-container" id="modal2">
+            <div class="modal-container">
                 <img src="recursos/opera2.png" alt="Pizzas Carta">
             </div>
-            <div class="modal-container" id="modal3">
+            <div class="modal-container">
                 <img src="recursos/opera3.png" alt="Pizzas Carta">
             </div>
-            <div class="modal-container" id="modal4">
+            <div class="modal-container">
                 <img src="recursos/opera4.png" alt="Plato Fuerte Carta">
             </div>
-            <div class="modal-container" id="modal5">
+            <div class="modal-container">
                 <img src="recursos/opera5.png" alt="Bebidas Carta">
             </div>
         </div>
