--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             </div>
             <div class="info">
                 <h1>Opera Pizzería & Restaurante Medellín</h1>
-                <p>Mejor al dente. Esta maxima italiana no se debe sólo al sabor que tengan nuestros platos si no sobre todo al rendimiento que obtenemos.</p>
-                <p>Cuando la pasta esta al dente, es más facil de digerir y además es mas nutritiva que muy cocida.</p>
+                <div class="frase">
+                    <p><strong>"</strong>El secreto de matenerse joven es vivir con honestidad, comer lentamente y mentir respecto a la edad<strong>"</strong>
+                        <br><strong class="autor">Lucille Ball</strong></p>
+                </div>
             </div>
         </header>
     </div>
@@ -60,23 +62,24 @@
         <footer>
             <p>Gracias por venir, esperamos que vuelvan pronto.</p>
             <div class="footer">
-                <div class="frase">
-                    <p><strong>"</strong>El secreto de matenerse joven es vivir con honestidad, comer lentamente y mentir respecto a la edad<strong>"</strong>
-                        <br><strong class="autor">Lucille Ball</strong></p>
-                </div>
                 <div class="horario">
                     <p><strong>Martes a Jueves: </strong>12:00 Pm a 09:45 Pm</p>
                     <p><strong>Viernes y Sábado: </strong>12:00 Pm a 10:45 Pm</p>
                     <p><strong>Domingos y Días Festivos</strong>12:00 Pm a 09:45 Pm</p>
                 </div>
                 <div class="info">
-                    <p><i class="fas fa-phone-square"></i> Tel: 250 68 11</p>
+                    <p><i class="fas fa-phone-square"></i> Tel: 301 60 01</p>
                     <p><i class="fas fa-map-marker-alt"></i> Calle 42 # 70 - 22 | Laureles - Estadio</p>
                     <p><i class="far fa-envelope"></i> operapizzeriayrest@gmail.com</p>
                     <div class="redes">
-                        <h3>Siguenos</h3>
-                        <a href="https://www.facebook.com/operapizzeriamedellin"><i class="fab fa-facebook-square face"></i></a>
-                        <a href="https://www.instagram.com/operapizzeriamedellin/"><i class="fab fa-instagram insta"></i></a>
+                        <div class="redesIcon">
+                            <h3>Siguenos</h3>
+                            <a href="https://www.facebook.com/operapizzeriamedellin"><i class="fab fa-facebook-square face"></i></a>
+                            <a href="https://www.instagram.com/operapizzeriamedellin/"><i class="fab fa-instagram insta"></i></a>
+                        </div>
+                        <div class="click">
+                            <p><i class="fas fa-long-arrow-alt-up"></i> Click Me <i class="fas fa-long-arrow-alt-up"></i></p>
+                        </div>
                     </div>
                 </div>
             </div>
