--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="promocion">
             <div class="infoPromo">
                 <p><strong>Martes - Viernes: </strong>12:00 Pm a 05:00 Pm</p>
-                <p>En Entradas - Pastas - Pizza - Plato Fuerte.</p>
+                <p>En Entradas - Pastas - Pizzas - Plato Fuerte.</p>
                 <p><strong>*</strong>No aplica para Postres - Adiciones - Bebidas.</p>
                 <p><strong>*</strong>No aplica para días festivos.</p>
             </div>
