--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="horario">
                     <p><strong>Martes a Jueves: </strong>12:00 Pm a 09:45 Pm</p>
                     <p><strong>Viernes y Sábado: </strong>12:00 Pm a 10:45 Pm</p>
-                    <p><strong>Domingos y Días Festivos</strong>12:00 Pm a 09:45 Pm</p>
+                    <p><strong>Domingos y Días Festivos: </strong>12:00 Pm a 09:45 Pm</p>
                 </div>
                 <div class="info">
                     <p><i class="fas fa-phone-square"></i> Tel: 301 60 01</p>
