Agregamos boton de whatsapp

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 </div>
                 <div class="info">
                     <p><i class="fas fa-phone-square"></i> Tel: 250 68 11</p>
+                    <p><i class="fab fa-whatsapp"></i> 301 572 1587</p>
                     <p><i class="fas fa-map-marker-alt"></i> Calle 42 # 70 - 22 | Laureles - Estadio</p>
                     <p><i class="far fa-envelope"></i> operapizzeriayrest@gmail.com</p>
                     <div class="redes">
