Cambio ruta imagenes

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
         <h2>Nuestra carta</h2>
         <div class="imagenes">
             <div class="modal-container">
-                <img src="recursos/opera1.png" alt="Entradas Carta">
+                <img src="recursos/opera1.jpeg" alt="Entradas Carta">
             </div>
             <div class="modal-container">
-                <img src="recursos/opera2.png" alt="Pizzas Carta">
+                <img src="recursos/opera2.jpeg" alt="Pizzas Carta">
             </div>
             <div class="modal-container">
-                <img src="recursos/opera3.png" alt="Pizzas Carta">
+                <img src="recursos/opera3.jpeg" alt="Pizzas Carta">
             </div>
             <div class="modal-container">
-                <img src="recursos/opera4.png" alt="Plato Fuerte Carta">
+                <img src="recursos/opera4.jpeg" alt="Plato Fuerte Carta">
             </div>
             <div class="modal-container">
-                <img src="recursos/opera5.png" alt="Bebidas Carta">
+                <img src="recursos/opera5.jpeg" alt="Bebidas Carta">
             </div>
         </div>
     </main>
