--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
     </div>
     <main class="contenedor">
-        <h2>Promoción</h2>
+        <!--<h2>Promoción</h2>
         <div class="promocion">
             <div class="infoPromo">
                 <p><strong>Martes - Viernes: </strong>12:00 Pm a 05:00 Pm</p>
@@ -38,7 +38,7 @@
             <div class="descuento">
                 <p><strong>20%</strong><br>Descuento</p>
             </div>
-        </div>
+        </div>-->
         <h2>Nuestra carta</h2>
         <div class="imagenes">
             <div class="modal-container">
