--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                     <p><strong>"</strong>El secreto de matenerse joven es vivir con honestidad, comer lentamente y mentir respecto a la edad<strong>"</strong>
                         <br><strong class="autor">Lucille Ball</strong></p>
                 </div>
+                <div>
+                    <p>Wifi: TIGO-9E0D</p>
+                    <p>Password: 2NB112101151</p>
+                    <p>
+                        <img src="recursos/QRBancolombia.png" alt="">
+                        <img src="recursos/efectivo.png" alt="">
+                    </p>
+                </div>
             </div>
         </header>
     </div>
@@ -85,7 +93,7 @@
                 </div>
             </div>
             <div class="copy">
-                <p>Desarrollado por Vanegas Desarrollo</p>
+                <p>Desarrollado por Vanegas Desarrollo - 2021</p>
                 <p>2021</p>
             </div>
         </footer>
