Cambios de diseño

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <p>Wifi: TIGO-9E0D</p>
                     <p>Password: 2NB112101151</p>
                     <p>
-                        <img src="recursos/QRBancolombia.png" alt="">
-                        <img src="recursos/efectivo.png" alt="">
+                        <img class="fab fa-whatsapp" src="recursos/QRBancolombia.png" alt="">
+                        <img class="fab fa-whatsapp" src="recursos/efectivo.png" alt="">
                     </p>
                 </div>
             </div>
