--- a/index.html
+++ b/index.html
@@ -24,13 +24,18 @@
                         <br><strong class="autor">Lucille Ball</strong></p>
                 </div>
                 <div>
-                    <br>
-                    <p>Wifi: TIGO-9E0D</p>
-                    <p>Password: 2NB112101151</p>
-                    <p>
-                        <img src="recursos/QRBancolombia.png" width="100" height="100" alt="">
-                        <img src="recursos/efectivo.png" alt="">
-                    </p>
+                    <div class="complemento">
+                            <div class="wifi">
+                                <h3>Wifi</h3>
+                                <p>Usuario: TIGO-9E0D</p>
+                                <p>Password: 2NB112101151</p>
+                            </div>
+                            <div>
+                                <h3>Medios De Pago</h3>
+                                    <img src="recursos/QRBancolombia.png" width="100" height="100" alt="">
+                                    <img src="recursos/efectivo.png" alt="">
+                            </div>
+                    </div>
                 </div>
             </div>
         </header>
