--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <div>
                                 <h2>Medios De Pago</h2>
                                 <img src="recursos/QRBancolombia.png" width="50" height="50" alt="">
-                                <img src="recursos/efectivo.png" alt="">
+                                <img src="recursos/efectivo.png" width="50" height="100" alt="">
                             </div>
                     </div>
                 </div>
