--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                             </div>
                             <div>
                                 <h2>Medios De Pago</h2>
-                                <img src="recursos/QRBancolombia.png" width="50" height="50" alt="">
-                                <img src="recursos/efectivo.png" width="200" height="100" alt="">
+                                <p>QR Bancolombia</p>
+                                <p>Efectivo</p>
                             </div>
                     </div>
                 </div>
