--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="recursos/opera4.png" alt="Plato Fuerte Carta">
             </div>
             <div class="modal-container">
-                <img src="recursos/opera5.jpeg" alt="Bebidas Carta">
+                <img src="recursos/opera5.png" alt="Bebidas Carta">
             </div>
         </div>
     </main>
